--- a/css/wetravelstyle.css
+++ b/css/wetravelstyle.css
@@ -101,10 +101,55 @@ h2{
   text-align:center;
 }
 
-.backgtound .content2{
+.backgtound1 .content2{
      display:table-cell;  
      width:80%;  
      padding:10px;  
+}
+
+.backgtound1 {
+  display:table; 
+}
+
+.content1{
+  text-align:justify;
+}
+
+.backgtound1 .content1{
+     display:table-cell;  
+     width:80%;  
+     padding:10px;  
+}
+
+.content2{
+  text-align:center;
+}
+
+.backgtound1 .content2{
+     display:table-cell;  
+     width:80%;  
+     padding:10px;  
+}
+
+.grid-container {
+  align-content: center;
+  display: grid;
+  grid-column-gap: 30px;
+  grid-template-columns: 500px 500px;
+  grid-row-gap: 50px;
+  padding: 50px;
+  margin-top: 0;
+  display:absolute;
+}
+
+.project{
+  text-align: center;
+  border-top: none;
+  font-size: 12px;
+  font-family: 'Montserrat';
+  margin:0;
+  margin-bottom:10px;
+  margin-top:30px;
 }
 
 
